--- a/style.css
+++ b/style.css
@@ -5,12 +5,66 @@ html {
     -moz-text-size-adjust: 100%;
 }
 
-body {
+body,
+h1,
+h2,
+h3,
+h4,
+h5 {
+    padding: 0;
     margin: 0;
 }
 
+h5 {
+    font-weight: normal;
+}
 
-                        /* navigation */
+
+/* screen */
+
+.colum {
+    box-sizing: border-box;
+    float: left;
+    width: 100%;
+    padding: 5px;
+    margin: 0;
+}
+
+@media all and (min-width: 768px) and (max-width:1024px) {
+    .colum {
+        box-sizing: border-box;
+        float: left;
+        width: 50%;
+        margin: 0;
+        padding: 5px;
+        background-color: black;
+        color: white;
+    }
+}
+
+@media all and (min-width: 1025px) {
+    .colum {
+        box-sizing: border-box;
+        float: left;
+        width: 33%;
+        margin: 0;
+        padding: 5px;
+        background-color: blue;
+    }
+
+    section {
+        box-sizing: border-box;
+        max-width: 1280px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
+
+
+
+/* header */
 
 .top {
     padding: 10px;
@@ -18,45 +72,52 @@ body {
 
 .top a {
     text-decoration: none;
-    color: #000000;   
+    color: #000000;
 }
 
 #logo {
-    display: inline;
+    display: inline-block;
     font-size: 25px;
     font-weight: bold;
-    padding-left: 20px;
-
+    margin: 0
 }
 
-#icon_search {
-    display: inline;
+#icon-search {
+    display: inline-block;
     float: right;
-    padding-top: 8px;
-        padding-right: 20px;
-    width: 23px;
-    height: 23px;
+    padding: 10px;
+    margin: 0;
+    width: 20px;
+    height: 20px;
 }
 
-#icon_user {
-    display: inline;
+#icon-user {
+    display: inline-block;
     float: right;
-    padding-top: 5px;
-    padding-right: 5%;
-    width: 27px;
-    height: 27px;
+    padding: 7px;
+    margin: 0;
+    padding-right: 3%;
+    width: 25px;
+    height: 25px;
 }
+
+
+
+
+
+/* navigation */
 
 .minitabs ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 0 10px 0 10px;
     overflow: hidden;
+    width: 100%;
 }
 
 .minitabs ul li {
     float: left;
-    width: 25%
+    width: 25%;
 }
 
 .minitabs ul li a {
@@ -68,7 +129,7 @@ body {
     text-decoration: none;
 }
 
-.minitabs ul li a.active {
+.minitabs ul li a.minitabs_active {
     color: #000000;
     border-bottom: 4px solid #000000;
 }
@@ -78,35 +139,44 @@ body {
 }
 
 
-                        /* section */
-#img_main {
-    max-width: 100%;
-    height: auto;        
+
+
+
+/* slideshow - index.html에 있음 */
+
+
+
+
+
+/* section */
+
+.search-region {
+    display: inline-block;
+    float: left;
+    width: 35%;
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid #a2a2a2;
+    border-radius: 5px;
 }
 
-
-                        /* screen */
-
-@media (min-width: 544px) {
-    .container {
-        max-width: 576px;
-    }
+.search-region-detail {
+    display: inline-block;
+    float: left;
+    width: 55%;
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid #a2a2a2;
+    border-radius: 5px;
 }
 
-@media (min-width: 768px) {
-    .container {
-        max-width: 720px;
-    }
+.meet-single {
+    padding: 2px 10px 2px 10px;
+    margin-top: 0;
+    border-top: 1px solid #d3d3d3;
 }
 
-@media (min-width: 992px) {
-    .container {
-        max-width: 940px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .container {
-        max-width: 1170px;
-    }
+.button1 {
+    margin: -5px 5px -5px 5px;
+    font-size: 10px;
 }
