--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ h5 {
 }
 
 
+
+
+
 /* screen */
 
 .colum {
@@ -66,11 +69,11 @@ h5 {
 
 /* header */
 
-.top {
+.header-main {
     padding: 10px;
 }
 
-.top a {
+.header-main a {
     text-decoration: none;
     color: #000000;
 }
@@ -142,7 +145,18 @@ h5 {
 
 
 
-/* slideshow - index.html에 있음 */
+/* slideshow */
+
+.image-main {
+    padidng: 0;
+    margin: 0;
+}
+
+#mainImage {
+    width: 100%;
+    height: auto;
+    padding: 3px 0 0 0;
+}
 
 
 
@@ -154,7 +168,8 @@ h5 {
     display: inline-block;
     float: left;
     width: 35%;
-    padding: 5px;
+    height: 27px;
+    padding: 3px;
     margin: 5px;
     border: 1px solid #a2a2a2;
     border-radius: 5px;
@@ -164,6 +179,7 @@ h5 {
     display: inline-block;
     float: left;
     width: 55%;
+    height: 15px;
     padding: 5px;
     margin: 5px;
     border: 1px solid #a2a2a2;
@@ -176,30 +192,87 @@ h5 {
     border-top: 1px solid #d3d3d3;
 }
 
+.meet-single-id {
+    padding: 0; 
+    margin: 0; 
+    font-size: 10px; 
+    color: #adadad;
+}
+
+.meet-single-read {
+    padding: 0; 
+    margin: 0; 
+    font-size: 10px; 
+    color: #adadad;
+}
+
 .meet-single-title {
     padding-top: 3px;
     padding-bottom: 3px;
 }
 
-.button1 {
-    float:right;
-    margin: 10px;
-    font-size: 10px;
-    border: none;
-    font-weight: bold;
-    color: #ffffff;
-    background-color: #ed4c4c
+.meet-single-info {
+    font-size: 11px; 
+    padding: 5px; 
+    color: #adadad;
 }
 
-.button2 {
+.meet-single-category {
+    font-size: 10px; 
+    padding: 3px;
+}
+
+.button-apply {
+    float:right;
+    margin: 10px;
+    padding: 2px;
+    font-size: 12px;
+    text-align: center;
+    width: 60px;
+    height: 15px;
+    border: 1px solid #c7c7c7;
+    border-radius: 3px;
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #ed4c4c;
+}
+
+.button-more {
    width: 96%;
     padding: 10px;
     margin: 10px;
-    border: 1px solid #0f0f0f;
-    background-color: #ffffff;
-    
-    
+    border: 1px solid #c7c7c7;
+     border-radius: 3px;
+    background-color: #ffffff;    
 }
+
+
+
+
+
+/* section - category */
+
+.image-button {
+    box-sizing: border-box;
+        width: 100px;
+    padding: 10px;
+    margin: 0;
+    overflow: hidden;
+}
+
+.image-button img {
+    border-radius: 50%;
+    border: 1px solid #c7c7c7;
+    width: 76px;
+    height: 76px;
+}
+
+.image-button figcaption {
+    font-size: 13px;
+    text-align: center;
+}
+
+
 
 
 
