--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    font-family: sans-serif;
+    font-family: georgia, "malgun gothic", serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
@@ -33,6 +33,20 @@ h5 {
     margin: 0;
 }
 
+#icon-user {
+    display: inline-block;
+    float: right;
+    margin: 0;
+    padding: 0;
+    width: 25px;
+    height: 25px;
+}
+
+#login {
+    display: none;
+}
+
+
 @media all and (min-width: 768px) and (max-width:1024px) {
     .colum {
         box-sizing: border-box;
@@ -42,6 +56,24 @@ h5 {
         padding: 5px;
         background-color: black;
         color: white;
+    }
+
+    #login {
+        display: inline-block;
+        float: right;
+        text-decoration: none;
+        margin: 0;
+        padding: 0;
+        font-size: 0.9em;
+    }
+    
+    #login a {
+    text-decoration: none;
+        color: #9a9a9a; 
+}
+
+    #icon-user {
+        display: none;
     }
 }
 
@@ -61,6 +93,24 @@ h5 {
         margin-left: auto;
         margin-right: auto;
     }
+
+     #login {
+        display: inline-block;
+        float: right;
+        text-decoration: none;
+        margin: 0;
+        padding: 0;
+        font-size: 0.9em;
+    }
+    
+    #login a {
+    text-decoration: none;
+        color: #9a9a9a; 
+}
+
+    #icon-user {
+        display: none;
+    }
 }
 
 
@@ -69,39 +119,36 @@ h5 {
 
 /* header */
 
-.header-main {
-    padding: 10px;
-}
-
-.header-main a {
-    text-decoration: none;
-    color: #000000;
+header {
+    padding: 15px;
+    max-width: 1200px;
+    height: 60px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 #logo {
     display: inline-block;
+    float: left;
     font-size: 25px;
     font-weight: bold;
-    margin: 0
+    margin: 0;
+    padding: 0;
+
+}
+
+#logo a {
+    text-decoration: none;
+        color: #000000; 
 }
 
 #icon-search {
     display: inline-block;
     float: right;
-    padding: 10px;
-    margin: 0;
-    width: 20px;
-    height: 20px;
-}
-
-#icon-user {
-    display: inline-block;
-    float: right;
-    padding: 7px;
-    margin: 0;
-    padding-right: 3%;
-    width: 25px;
-    height: 25px;
+    margin: 0 2% 0 0;
+    padding: 0;
+    width: 23px;
+    height: 23px;
 }
 
 
@@ -110,35 +157,83 @@ h5 {
 
 /* navigation */
 
-.minitabs ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0 10px 0 10px;
-    overflow: hidden;
+
+
+
+nav {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.outer {
+    display: table;
     width: 100%;
+    height: 100%;
 }
 
-.minitabs ul li {
-    float: left;
-    width: 25%;
-}
-
-.minitabs ul li a {
-    display: block;
-    color: #909090;
-    font-weight: bold;
+.inner {
+    display: table-cell;
+        vertical-align: middle;
     text-align: center;
-    padding: 14px 16px;
+}
+
+.cell {
+    display: inline-block;
+    padding: 7px;
+    margin: 0 3%;    
+}
+
+nav a {
+    color: #909090;
+    text-align: center;
+    font-size: 0.9em;
     text-decoration: none;
 }
 
-.minitabs ul li a.minitabs_active {
-    color: #000000;
-    border-bottom: 4px solid #000000;
+
+
+
+
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-.minitabs ul li a:hover {
-    border-bottom: 4px solid #000000;
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: inherit;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 
@@ -156,6 +251,128 @@ h5 {
     width: 100%;
     height: auto;
     padding: 3px 0 0 0;
+}
+
+
+
+
+
+
+* {
+    box-sizing: border-box
+}
+
+body {
+    font-family: Verdana, sans-serif;
+    margin: 0
+}
+
+.mySlides {
+    display: none
+}
+
+img {
+    vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 
@@ -193,16 +410,16 @@ h5 {
 }
 
 .meet-single-id {
-    padding: 0; 
-    margin: 0; 
-    font-size: 10px; 
+    padding: 0;
+    margin: 0;
+    font-size: 10px;
     color: #adadad;
 }
 
 .meet-single-read {
-    padding: 0; 
-    margin: 0; 
-    font-size: 10px; 
+    padding: 0;
+    margin: 0;
+    font-size: 10px;
     color: #adadad;
 }
 
@@ -212,18 +429,18 @@ h5 {
 }
 
 .meet-single-info {
-    font-size: 11px; 
-    padding: 5px; 
+    font-size: 11px;
+    padding: 5px;
     color: #adadad;
 }
 
 .meet-single-category {
-    font-size: 10px; 
+    font-size: 10px;
     padding: 3px;
 }
 
 .button-apply {
-    float:right;
+    float: right;
     margin: 10px;
     padding: 2px;
     font-size: 12px;
@@ -238,12 +455,12 @@ h5 {
 }
 
 .button-more {
-   width: 96%;
+    width: 96%;
     padding: 10px;
     margin: 10px;
     border: 1px solid #c7c7c7;
-     border-radius: 3px;
-    background-color: #ffffff;    
+    border-radius: 3px;
+    background-color: #ffffff;
 }
 
 
@@ -253,12 +470,25 @@ h5 {
 /* section - category */
 
 .image-button {
-    box-sizing: border-box;
-        width: 100px;
-    padding: 10px;
     margin: 0;
-    overflow: hidden;
+    padding: 20px 30px;
 }
+
+.image-button ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 10px 0 10px;
+    overflow: hidden;
+    width: 110%;
+}
+
+.image-button ul li {
+    float: left;
+    width: 100px;
+    text-align: center;
+}
+
+
 
 .image-button img {
     border-radius: 50%;
@@ -271,11 +501,3 @@ h5 {
     font-size: 13px;
     text-align: center;
 }
-
-
-
-
-
-
-
-
