--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h5 {
 
 .cell {
     display: inline-block;
-    padding: 7px;
+    padding: 5px;
     margin: 0 1%;
 }
 
@@ -77,6 +77,10 @@ h5 {
         text-decoration: none;
         color: #9a9a9a;
     }
+    
+    #login a:hover {
+           color: #000000;
+}
 
     #icon-user {
         display: none;
@@ -84,7 +88,7 @@ h5 {
 
     .cell {
         display: inline-block;
-        padding: 7px;
+        padding: 5px;
         margin: 0 2%;
     }
 }
@@ -121,6 +125,10 @@ h5 {
         text-decoration: none;
         color: #9a9a9a;
     }
+    
+        #login a:hover {
+           color: #000000;
+}
 
     #icon-user {
         display: none;
@@ -128,7 +136,7 @@ h5 {
 
     .cell {
         display: inline-block;
-        padding: 7px;
+        padding: 5px;
         margin: 0 4%;
     }
 }
@@ -178,9 +186,6 @@ header {
 
 /* navigation */
 
-
-
-
 nav {
     max-width: 1000px;
     margin: 0 auto;
@@ -198,8 +203,6 @@ nav {
     text-align: center;
 }
 
-
-
 nav a {
     color: #909090;
     text-align: center;
@@ -207,38 +210,47 @@ nav a {
     text-decoration: none;
 }
 
-
-
-
-
-.dropdown {
-    float: left;
-    overflow: hidden;
+.cell a:active {
+   border-bottom: 2px solid #000000;
+    color: #000000;
 }
 
-.dropdown .dropbtn {
-    font-size: 16px;
+.cell a:hover {
+    border-bottom: 2px solid #000000;
+        color: #000000;
+}
+
+.dropbtn {
+    font-size: 0.9em;
     border: none;
     outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
+    color: #909090;
+    padding: 0;
+    background-color: #ffffff;
     font-family: inherit;
     margin: 0;
 }
 
+.dropbtn :hover {
+color: #000000;
+}
+
+
+
+
+
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
     float: none;
-    color: black;
+    color: #909090;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -247,6 +259,7 @@ nav a {
 
 .dropdown-content a:hover {
     background-color: inherit;
+    border: none;
 }
 
 .dropdown:hover .dropdown-content {
