--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ h5 {
     float: left;
     width: 100%;
     padding: 5px;
-    margin: 0;
 }
 
 #icon-user {
@@ -99,7 +98,7 @@ h5 {
     .colum {
         box-sizing: border-box;
         float: left;
-        width: 33%;
+        width: 33.33%;
         margin: 0;
         padding: 5px;
         background-color: blue;
@@ -157,6 +156,7 @@ header {
 }
 
 #logo {
+    font-family: verdana;
     display: inline-block;
     float: left;
     font-size: 25px;
@@ -211,12 +211,10 @@ nav a {
 }
 
 .cell a:active {
-    border-bottom: 2px solid #000000;
     color: #000000;
 }
 
 .cell a:hover {
-    border-bottom: 2px solid #000000;
     color: #000000;
 }
 
@@ -246,14 +244,15 @@ nav a {
     margin: 0;
 }
 
-
-
+.dropbtn:hover {
+    color: #000000;
+}
 
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #ffffff;
-    min-width: 160px;
+    min-width: 120px;
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
@@ -261,7 +260,7 @@ nav a {
 .dropdown-content a {
     float: none;
     color: #909090;
-    padding: 12px 16px;
+    padding: 10px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
@@ -282,33 +281,12 @@ nav a {
 
 /* slideshow */
 
-.image-main {
-    padidng: 0;
-    margin: 0;
-}
-
-#mainImage {
-    width: 100%;
-    height: auto;
-    padding: 3px 0 0 0;
-}
-
-
-
-
-
-
 * {
-    box-sizing: border-box
-}
-
-body {
-    font-family: Verdana, sans-serif;
-    margin: 0
+    box-sizing: border-box;
 }
 
 .mySlides {
-    display: none
+    display: none;
 }
 
 img {
@@ -317,42 +295,14 @@ img {
 
 /* Slideshow container */
 .slideshow-container {
-    max-width: 1000px;
+    width: 100%;
     position: relative;
     margin: auto;
 }
 
-/* Next & previous buttons */
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
 /* Caption text */
 .text {
-    color: #f2f2f2;
+    color: #000000;
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
@@ -372,9 +322,8 @@ img {
 
 /* The dots/bullets/indicators */
 .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
     margin: 0 2px;
     background-color: #bbb;
     border-radius: 50%;
@@ -382,8 +331,7 @@ img {
     transition: background-color 0.6s ease;
 }
 
-.active,
-.dot:hover {
+.active {
     background-color: #717171;
 }
 
@@ -412,6 +360,13 @@ img {
 
     to {
         opacity: 1
+    }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .text {
+        font-size: 11px
     }
 }
 
@@ -541,3 +496,31 @@ img {
     font-size: 13px;
     text-align: center;
 }
+
+
+
+
+
+/* section - date */
+dl {
+   position: relative;
+}
+dt {
+   height: 30px;
+   float: left;
+   width: 50%;
+   z-index: 9;
+   position: relative;
+}
+dd {
+   position: absolute;
+   padding-top: 30px;
+   background-color: #f3f3f3;
+   width: 50%;
+   height: 200px;
+}
+dd.hidden {
+   display: none;
+}
+
+
