--- a/style.css
+++ b/style.css
@@ -10,15 +10,14 @@ h1,
 h2,
 h3,
 h4,
-h5,
-section {
+h5 
+ {
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
+
 }
 
-h5 {
-    font-weight: normal;
-}
+
 
 
 
@@ -27,19 +26,20 @@ h5 {
 /* screen */
 
 .colum {
+    display: inline-block;
     box-sizing: border-box;
     float: left;
     width: 100%;
-    padding: 5px;
+    padding: 10px;
 }
 
 #icon-user {
     display: inline-block;
     float: right;
-    margin: 0;
-    padding: 0;
-    width: 1.4em;
-    height: 1.4em;
+    margin: 0 10px;
+    padding: 0 ;
+    width: 1.3em;
+    height: 1.3em;
 }
 
 #login {
@@ -56,11 +56,12 @@ h5 {
 
 @media all and (min-width: 768px) and (max-width:1024px) {
     .colum {
+            display: inline-block;
         box-sizing: border-box;
         float: left;
         width: 50%;
         margin: 0;
-        padding: 5px;
+        padding: 10px;
         background-color: black;
         color: white;
     }
@@ -98,11 +99,12 @@ h5 {
 
 @media all and (min-width: 1025px) {
     .colum {
+            display: inline-block;
         box-sizing: border-box;
         float: left;
         width: 33.33%;
         margin: 0;
-        padding: 5px;
+        padding: 10px;
         background-color: blue;
     }
 
@@ -150,9 +152,10 @@ h5 {
 /* header */
 
 header {
-    padding: 15px;
+    display: block;
+    padding: 10px 15px;
     max-width: 1200px;
-    height: 60px;
+    height: 50px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -163,9 +166,6 @@ header {
     float: left;
     font-size: 1.4em;
     font-weight: bold;
-    margin: 0;
-    padding: 0;
-
 }
 
 #logo a {
@@ -176,10 +176,10 @@ header {
 #icon-search {
     display: inline-block;
     float: right;
-    margin: 0 3% 0 0;
+    margin: 0 20px 0 0;
     padding: 0;
-    width: 1.2em;
-    height: 1.2em;
+    width: 1.3em;
+    height: 1.3em;
 }
 
 
@@ -189,7 +189,6 @@ header {
 /* navigation */
 
 .navmenu {
-   
     margin: 0 auto;
     background-color: #ffffff;
     border-bottom: 1px solid #dddddd;
@@ -203,12 +202,7 @@ header {
     z-index: 9999;
     text-align: center;
         padding: 2px;
-
 }
-
-
-
-
 
 .outer {
     display: table;
@@ -218,6 +212,7 @@ header {
 
 .inner {
     display: table-cell;
+    border-collapse:collapse;
     vertical-align: middle;
     text-align: center;
 }
@@ -396,6 +391,24 @@ img {
 
 /* section - region */
 
+select {
+padding: 0 0.8em;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 1px solid #a2a2a2;
+    height: 20px; 
+font-family: inherit; 
+background: url('icon/down-arrow.svg') no-repeat 95% 50%; 
+border-radius: 0px; 
+-webkit-appearance: none; 
+-moz-appearance: none;
+appearance: none;
+}
+select::-ms-expand {
+    display: none;
+}
+
+/*
 .search-region {
     display: inline-block;
     float: left;
@@ -417,14 +430,18 @@ img {
     border: none;
     border-bottom: 1px solid #a2a2a2;
 }
+*/
+
 
 .meet-single {
+    display: block;
     padding: 2px 10px 2px 10px;
     margin-top: 0;
     border-top: 1px solid #d3d3d3;
 }
 
 .meet-single-id {
+    display: block;
     padding: 0;
     margin: 0;
     font-size: 10px;
