--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ h5
     float: right;
     margin: 0 10px;
     padding: 0;
-    width: 1.3em;
-    height: 1.3em;
+    width: 20px;
+    height: 20px;
 }
 
 #login {
@@ -176,7 +176,7 @@ header {
 #icon-search {
     display: inline-block;
     float: right;
-    margin: 0 20px 0 0;
+    margin: 0 10px 0 0;
     padding: 0;
     width: 1.3em;
     height: 1.3em;
