--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ h5
     float: right;
     margin: 0 10px;
     padding: 0;
-    width: 20px;
-    height: 20px;
+    width: 1.3em;
+    height: 1.3em;
 }
 
 #login {
