--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ h5
     margin: 0 1%;
 }
 
+.dropdown-content2 {
+    right: 10%;
+}
 
 
 @media all and (min-width: 768px) and (max-width:1024px) {
@@ -93,6 +96,10 @@ h5
         padding: 5px;
         margin: 0 2%;
     }
+    
+    .dropdown-content2 {
+    right: 13%;
+}
 }
 
 
@@ -142,6 +149,10 @@ h5
         padding: 5px;
         margin: 0 4%;
     }
+    
+.dropdown-content2 {
+    right: 13%;
+}
 }
 
 
@@ -289,6 +300,32 @@ nav a {
     display: block;
 }
 
+.dropdown-content2 {
+    display: none;
+    position: absolute;
+    background-color: #ffffff;
+    min-width: 140px;
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content2 a {
+    float: none;
+    color: #909090;
+    padding: 10px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content2 a:hover {
+    background-color: inherit;
+    border: none;
+}
+
+.dropdown:hover .dropdown-content2 {
+    display: block;
+}
 
 
 
