--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h5
 }
 
 .dropdown-content2 {
-    right: 10%;
+    right: 6%;
 }
 
 
@@ -433,7 +433,7 @@ padding: 0 0.8em;
     margin: 10px 0;
     border: none;
     border-bottom: 1px solid #a2a2a2;
-    height: 20px; 
+    height: 25px; 
 font-family: inherit; 
 background: url('icon/down-arrow.svg') no-repeat 95% 50%; 
 border-radius: 0px; 
@@ -449,10 +449,10 @@ select::-ms-expand {
 .search-region {
     display: inline-block;
     float: left;
-    width: 35%;
+    width: 25%;
     height: 27px;
     padding: 3px;
-    margin: 5px;
+    margin: 10px;
     border: none;
     border-bottom: 1px solid #a2a2a2;
 }
@@ -460,10 +460,21 @@ select::-ms-expand {
 .search-region-detail {
     display: inline-block;
     float: left;
-    width: 45%;
+    width: 30%;
     height: 27px;
     padding: 3px;
-    margin: 5px;
+    margin: 10px;
+    border: none;
+    border-bottom: 1px solid #a2a2a2;
+}
+
+.search-region-hot {
+    display: inline-block;
+    float: left;
+    width: 35%;
+    height: 27px;
+    padding: 3px;
+    margin: 10px;
     border: none;
     border-bottom: 1px solid #a2a2a2;
 }
@@ -472,35 +483,44 @@ select::-ms-expand {
 
 .meet-single {
     display: block;
-    padding: 2px 10px 2px 10px;
+    padding: 2px 10px;
     margin-top: 0;
-    border-top: 1px solid #d3d3d3;
+    border-top: 4px solid #40a4f4;
+    box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
 
 .meet-single-id {
-    display: block;
+    display: inline-block;
     padding: 0;
     margin: 0;
-    font-size: 10px;
+    font-size: 0.8em;
     color: #adadad;
 }
 
 .meet-single-read {
+     display: inline-block;
+    float: right;
     padding: 0;
     margin: 0;
-    font-size: 10px;
+    font-size: 0.8em;
     color: #adadad;
 }
 
 .meet-single-title {
-    padding-top: 3px;
-    padding-bottom: 3px;
+    font-size: 0.9em;
+    padding: 5px 0;
+    margin: 0;
+      overflow: hidden; 
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .meet-single-info {
-    font-size: 11px;
-    padding: 5px;
+    font-size: 0.8em;
     color: #adadad;
+    width: 100%;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #dddddd;
 }
 
 .meet-single-category {
