--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    font-family: georgia, "malgun gothic", serif;
+    font-family: arial, "malgun gothic", serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
