--- a/style.css
+++ b/style.css
@@ -29,10 +29,9 @@ h5
     display: inline-block;
     box-sizing: border-box;
     float: left;
-    width: 96%;
+    width: 100%;
     padding: 10px;
     box-shadow:0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
-    margin: 10px;
 }
 
 #icon-user {
@@ -121,7 +120,7 @@ h5
 
     section {
         box-sizing: border-box;
-        max-width: 1280px;
+        max-width: 1320px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -367,24 +366,16 @@ img {
     text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
 /* The dots/bullets/indicators */
 .dot {
-    height: 0.5em;
-    width: 0.5em;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
+    height: 0.1em;
+    width: 1em;
+    margin: -1px;    
+    background-color: #e3e3e3;
     display: inline-block;
     transition: background-color 0.6s ease;
+    position: relative;
+    top:-21px; left: 10px;
 }
 
 .active {
@@ -447,8 +438,7 @@ font-family: inherit;
     padding: 5px 10px;
     border: 1px solid #d0d0d0;
     background-color: #ffffff;
-    border-left: 6px solid #ff00ff;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
 
 .meet-single-id {
@@ -469,8 +459,8 @@ font-family: inherit;
 }
 
 .meet-single-title {
-    font-size: 0.9em;
-    padding: 8px 0 8px 0;
+    font-size: 0.85em;
+    padding: 5px 0 3px 0;
     margin: 0;
       overflow: hidden; 
   text-overflow: ellipsis;
@@ -478,7 +468,7 @@ font-family: inherit;
 }
 
 .meet-single-info {
-    font-size: 0.8em;
+    font-size: 0.7em;
     color: #adadad;
     width: 100%;
     padding-bottom: 5px;
@@ -494,7 +484,7 @@ font-family: inherit;
     padding: 1px;
     font-size: 0.8em;
     text-align: center;
-    width: 60px;
+    width: 55px;
     height: 2em;
     border: 1px solid #c7c7c7;
     color: #ffffff;
