--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ h5
     width: 100%;
     padding: 10px;
     box-shadow:0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
+    margin-bottom: 10px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 #icon-user {
@@ -60,15 +63,15 @@ h5
 
 @media all and (min-width: 768px) and (max-width:1024px) {
     .colum {
-            display: inline-block;
+        display: inline-block;
         box-sizing: border-box;
         float: left;
-        width: 47%;
-        margin: 0;
+        width: 48%;
         padding: 10px;
-        color: white;
          box-shadow:0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
-    margin: 10px; 
+    margin-bottom: 10px;
+    margin-left: 7px;
+    margin-right: 7px;
     }
 
     #login {
@@ -111,16 +114,17 @@ h5
             display: inline-block;
         box-sizing: border-box;
         float: left;
-        width: 31.2%;
-        margin: 0;
+        width: 30.3%;
         padding: 10px;
        box-shadow:0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
-    margin: 10px; 
+    margin-bottom: 10px;
+    margin-left: 14px;
+    margin-right: 14px;
     }
 
     section {
         box-sizing: border-box;
-        max-width: 1320px;
+        max-width: 1280px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -438,7 +442,7 @@ font-family: inherit;
     padding: 5px 10px;
     border: 1px solid #d0d0d0;
     background-color: #ffffff;
-    margin-bottom: 0;
+    margin: 0 0 5px 0;
 }
 
 .meet-single-id {
@@ -494,14 +498,14 @@ font-family: inherit;
 .morebtn {
     text-align: center;
     font-size: 0.9em;
-    align-content:  color: #ffffff;
-    padding: 8px 0;
+    padding: 7px 0;
     margin: 10px -10px -10px -10px;
-    background-color: #ededed;    
+    border-top: 1px solid #e5e5e5;
 }
 
 .morebtn a {
     text-decoration: none;
+    color: #727272;
 }
 
 
@@ -509,6 +513,83 @@ font-family: inherit;
 
 
 /* 테마별 분류 */
+
+
+.myImgs {display: none}
+
+/* Slideshow container */
+.imgshow-container {
+  width: 100%;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: grey;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.imgtext {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Fading animation */
+.fadeImg {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fadeImg {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fadeImg {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.imgtext {font-size: 11px}
+}
+
+
+
+
+
+
+
+
 
 .categorybtn {
     display:inline-block;
@@ -518,9 +599,9 @@ font-family: inherit;
 .categorybtn img {
     border-radius: 50%;
     border: 1px solid #c7c7c7;
-    width: 76px;
-    height: 76px;
-    margin: 10px 5px 5px 10px;
+    width: 64px;
+    height: 64px;
+    margin: 10px 4px 4px 10px;
 }
 
 .categorybtn figcaption {
