--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ h1,
 h2,
 h3,
 h4,
-h5 
- {
+h5 {
     padding: 0;
     margin: 0 auto;
 
@@ -28,13 +27,14 @@ h5
 .colum {
     display: inline-block;
     box-sizing: border-box;
-    float: left;
+    
     width: 100%;
     padding: 10px;
-    box-shadow:0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
+    box-shadow: 0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
     margin-bottom: 10px;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: top;
 }
 
 #icon-user {
@@ -61,17 +61,18 @@ h5
 }
 
 
-@media all and (min-width: 768px) and (max-width:1024px) {
+@media all and (min-width: 768px) and (max-width:1152px) {
     .colum {
         display: inline-block;
         box-sizing: border-box;
-        float: left;
+       
         width: 48%;
         padding: 10px;
-         box-shadow:0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
-    margin-bottom: 10px;
-    margin-left: 7px;
-    margin-right: 7px;
+        box-shadow: 0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
+        margin-bottom: 10px;
+        margin-left: 5px;
+        margin-right: 5px;
+         vertical-align: top;
     }
 
     #login {
@@ -101,25 +102,26 @@ h5
         padding: 5px;
         margin: 0 2%;
     }
-    
+
     .dropdown-content2 {
-    right: 13%;
+        right: 13%;
+    }
 }
-}
 
 
 
-@media all and (min-width: 1025px) {
+@media all and (min-width: 1153px) {
     .colum {
-            display: inline-block;
+        display: inline-block;
         box-sizing: border-box;
-        float: left;
-        width: 30.3%;
+        
+        width: 31%;
         padding: 10px;
-       box-shadow:0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
-    margin-bottom: 10px;
-    margin-left: 14px;
-    margin-right: 14px;
+        box-shadow: 0 6px 8px 0 hsla(0, 0%, 0%, 0.2);
+        margin-bottom: 10px;
+        margin-left: 7px;
+        margin-right: 7px;
+         vertical-align: top;
     }
 
     section {
@@ -156,10 +158,10 @@ h5
         padding: 5px;
         margin: 0 4%;
     }
-    
-.dropdown-content2 {
-    right: 13%;
-}
+
+    .dropdown-content2 {
+        right: 13%;
+    }
 }
 
 
@@ -219,7 +221,8 @@ header {
     width: 100%;
     z-index: 9999;
     text-align: center;
-        padding: 2px;
+    padding: 2px;
+     background-color: #ffffff;
 }
 
 .outer {
@@ -230,7 +233,7 @@ header {
 
 .inner {
     display: table-cell;
-    border-collapse:collapse;
+    border-collapse: collapse;
     vertical-align: middle;
     text-align: center;
 }
@@ -374,12 +377,13 @@ img {
 .dot {
     height: 0.1em;
     width: 1em;
-    margin: -1px;    
+    margin: -1px;
     background-color: #e3e3e3;
     display: inline-block;
     transition: background-color 0.6s ease;
     position: relative;
-    top:-21px; left: 10px;
+    top: -21px;
+    left: 10px;
 }
 
 .active {
@@ -428,13 +432,13 @@ img {
 /* 지역별 분류 */
 
 select {
-padding: 0 0.8em;
+    padding: 0 0.8em;
     margin: 10px 0;
     border: none;
     border: 1px solid #d0d0d0;
     border-radius: 5px;
-    height: 25px; 
-font-family: inherit; 
+    height: 25px;
+    font-family: inherit;
 }
 
 .meet-single {
@@ -454,7 +458,7 @@ font-family: inherit;
 }
 
 .meet-single-read {
-     display: inline-block;
+    display: inline-block;
     float: right;
     padding: 0;
     margin: 0;
@@ -466,9 +470,9 @@ font-family: inherit;
     font-size: 0.85em;
     padding: 5px 0 3px 0;
     margin: 0;
-      overflow: hidden; 
-  text-overflow: ellipsis;
-  white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .meet-single-info {
@@ -486,7 +490,7 @@ font-family: inherit;
 .button-apply {
     float: right;
     padding: 1px;
-    font-size: 0.8em;
+    font-size: 0.9em;
     text-align: center;
     width: 55px;
     height: 2em;
@@ -515,98 +519,21 @@ font-family: inherit;
 /* 테마별 분류 */
 
 
-.myImgs {display: none}
-
-/* Slideshow container */
-.imgshow-container {
-  width: 100%;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: grey;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.imgtext {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Fading animation */
-.fadeImg {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fadeImg {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fadeImg {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.imgtext {font-size: 11px}
-}
-
-
-
-
-
-
-
-
-
 .categorybtn {
-    display:inline-block;
-    float:left;
+    display: inline-block;
 }
 
 .categorybtn img {
     border-radius: 50%;
     border: 1px solid #c7c7c7;
-    width: 64px;
-    height: 64px;
-    margin: 10px 4px 4px 10px;
+    width: 50px;
+    height: 50px;
+    margin: 10px 5px 1px 5px;
 }
 
 .categorybtn figcaption {
     text-align: center;
-    font-size: 0.8em;
+    font-size: 0.7em;
 }
 
 
