--- a/tablet.css
+++ b/tablet.css
@@ -48,7 +48,7 @@ nav {border:1px solid black; margin:0 auto; width:100%;}
 
 section {border:1px solid black; margin:0 auto; width:100%;}
 
-.container-slideshow {background-color:aqua; margin:0 auto; width:100%; height:200px;}
+.container-slideshow {background-color:aqua; margin:0 auto; width:100%; height:auto;}
 
 .section-inner1 {background-color:darkslateblue; margin:0 40px; height:300px;}
 .main-colum-1 {background-color:red; width:100%; height:100px; float:left;}
@@ -74,25 +74,34 @@ footer {border:1px solid black; margin:0 auto; width:100%;}
 
 #login {display:none;}
 #signup {display:none;}
-#icon-user {display:inline-block; width:1.5rem; height:1.5rem; margin:14px 15px; float:right}
-#icon-search {display:inline-block; width:1.5rem; height:1.5rem; margin:14px 15px; float:right;}
+#icon-user {display:inline-block; width:1.3rem; height:1.3rem; margin:14px 0px; float:right}
+#icon-search {display:inline-block; width:1.3rem; height:1.3rem; margin:14px 16px; float:right;}
 
-#icon-user:hover {width:1.6rem; height:1.6rem;}
-#icon-search:hover {width:1.6rem; height:1.6rem;}
+#icon-user:hover {width:1.4rem; height:1.4rem;}
+#icon-search:hover {width:1.4rem; height:1.4rem;}
 #logo:active {border:1px solid #9a9a9a;}
-#icon-user:active {border:1px solid #9a9a9a; width:1.6rem; height:1.6rem;}
-#icon-search:active {border:1px solid #9a9a9a; width:1.6rem; height:1.6rem;}
+#icon-user:active {border:1px solid #9a9a9a; width:1.4rem; height:1.4rem;}
+#icon-search:active {border:1px solid #9a9a9a; width:1.4rem; height:1.4rem;}
 
 
 
 /* navigation */
-.nav-inner table {width:100%;}
-.nav-cell {display:table-cell; font-size:1rem; text-align:center; color:#9a9a9a; width:auto; padding:8px 0;}
+.nav-inner table {width:100%; text-align:center;}
+.nav-cell {display:table-cell; font-size:1rem; color:#9a9a9a; padding:10px 0;}
 
 .nav-cell:hover {color:black;}
 .nav-cell:active {border:1px solid #9a9a9a; color:black;}
 
+.navFixed {position:fixed; top:0px; width:100%; z-index:9999; text-align:center; padding:2px; background-color:#ffffff; border-bottom:2px solid #9a9a9a;}
 
+
+
+/* slideshow */
+.mySlides {display:none;}
+.captext {display:inline; color:#ffffff; font-size: 0.8rem; padding:0 20px; position:relative; top:-45px; width:100%; text-align:left;}
+.dot {display:inline-block; height: 0.1rem; width:1.2rem; margin:-1px; top:-55px; left:20px; background-color:#e3e3e3; transition:background-color 0.6s ease; position:relative; }
+.activedot {background-color:#00ff00;}
+.fade {-webkit-animation-name:fade; -webkit-animation-duration:1.5s; animation-name:fade; animation-duration:1.5s;}
 
 
 
