--- a/mobile.css
+++ b/mobile.css
@@ -1,5 +1,5 @@
 @charset "utf-8"
-/* tablet css document screen size to 375px */
+/* mobile css document screen size to 375px */
     
     
 html {
@@ -49,16 +49,16 @@ section {border:1px solid black; margin:0 auto; width:100%;}
 
 .container-slideshow {background-color:aqua; margin:0 auto; width:100%; height:auto;}
 
-.section-inner1 {background-color:darkslateblue; margin:0 40px; height:300px;}
-.main-colum-1 {background-color:red; width:100%; height:100px; float:left;}
-.main-colum-2 {background-color:pink; width:100%;  height:100px; float:left;}
-.main-colum-3 {background-color:yellow; width:100%; height:100px; float:left;}
+.section-inner1 {background-color:darkslateblue; margin:0 10px; height:600px;}
+.main-colum-1 {background-color:red; width:100%; height:200px; float:left;}
+.main-colum-2 {background-color:pink; width:100%;  height:200px; float:left;}
+.main-colum-3 {background-color:yellow; width:100%; height:200px; float:left;}
 
-.section-inner2 {background-color:darkslateblue; margin:0 40px; height:200px;}
+.section-inner2 {background-color:darkslateblue; margin:0 10px; height:200px;}
 .main-colum-4 {background-color:green; width:100%; height:100px; float:left;}
 .main-colum-5 {background-color:#5d5dff; width:100%; height:100px; float:left;}
 
-.section-inner3 {background-color:darkslateblue; margin:0 40px; height:300px;}
+.section-inner3 {background-color:darkslateblue; margin:0 10px; height:300px;}
 .main-colum-6 {background-color:violet; width:100%; height:100px; float:left;}
 .main-colum-7 {background-color:skyblue; width:100%; height:100px; float:right;}
 .main-colum-8 {background-color:grey; width:100%; height:100px; float:left;}
@@ -98,10 +98,6 @@ footer {border:1px solid black; margin:0 auto; width:100%;}
 
 /* slideshow */
 .mySlides {display:none;}
-.captext {display:inline; color:#ffffff; font-size: 0.8rem; padding:0 20px; position:relative; top:-45px; width:100%; text-align:left;}
-.dot {display:inline-block; height: 0.1rem; width:1.2rem; margin:-1px; top:-55px; left:20px; background-color:#e3e3e3; transition:background-color 0.6s ease; position:relative; }
-.activedot {background-color:#00ff00;}
-.fade {-webkit-animation-name:fade; -webkit-animation-duration:1.5s; animation-name:fade; animation-duration:1.5s;}
 
 
 
