--- a/desktop.css
+++ b/desktop.css
@@ -9,7 +9,7 @@ html {
     -moz-text-size-adjust: 100%;
 }
 
-html, body, div, span, h1, h2, h3, h4, h5, h6, p, pre, a, address, em, img, small, strong, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, thead, tr, th, td, article, aside, canvas, embed, figure, figcaption, footer, header, nav, section, summary, time, audio, video, button, input {
+html, body, div, span, h1, h2, h3, h4, h5, h6, p, pre, a, address, em, img, small, strong, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, thead, tr, th, td, article, aside, canvas, embed, figure, figcaption, footer, header, nav, section, summary, time, audio, video, button, input, iframe {
   margin: 0;
   border: 0;
   padding: 0;
@@ -49,8 +49,8 @@ section {border:1px solid black; margin:0 auto; width:100%; max-width:1510px;}
 
 .container-slideshow {background-color:aqua; margin:0 auto; width:100%; height:auto;}
 
-.section-inner1 {background-color:darkslateblue; margin:0 40px; height:250px;}
-.main-colum-1 {background-color:red; width:33.3333%; height:200px; float:left;}
+.section-inner1 {background-color:darkslateblue; margin:0 40px; height:500px;}
+.main-colum-1 {background-color:red; width:33.3333%; height:450px; float:left;}
 .main-colum-2 {background-color:pink; width:33.3333%;  height:200px; float:left;}
 .main-colum-3 {background-color:yellow; width:33.3333%; height:200px; float:left;}
 
@@ -107,7 +107,7 @@ select, .inputbtn {padding:0 0.7rem; border:1px solid #9a9a9a; border-radius:5px
 .search-region {width:80px;}
 .search-region-detail {width:100px;}
 
-iframe {width:100%; height:150px; border:1;}
+iframe {width:100%; height:300px;}
 
 
 
